--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "typescript": "^5.4.2",
-    "@types/react": "^18.2.15",
-    "@types/node": "^20.11.19"
-    "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
     "next": "14.1.0",
-    "postcss": "^8.4.24",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.2",
+    "@types/react": "^18.2.15",
+    "@types/node": "^20.11.19",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
 }
