--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "framer-motion": "^10.12.16",
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
     "googleapis": "^118.0.0"
   },
   "devDependencies": {
